footer icons changes

--- a/index.html
+++ b/index.html
@@ -630,69 +630,39 @@
                     <h3>Contact With Us</h3>
                 </div>
                 <div class="socialmedia">
-                    <div class="facebook">
-                        <a href="https://www.facebook.com" target="_blank"><img src="./images/footericons/fb.png"
-                                alt="fb"></a>
-                    </div>
-                    <div class="twitter">
-                        <a href="https://www.twitter.com" target="_blank"><img src="./images/footericons/twitter.png"
-                                alt="twitter"></a>
-                    </div>
-                    <div class="google">
-                        <a href="https://www.google.com" target="_blank"><img src="./images/footericons/google.png"
-                                alt="google"></a>
-                    </div>
-                    <div class="gmail">
-                        <a href="https://www.gmail.com" target="_blank"><img src="./images/footericons/email.png"
-                                alt="email"></a>
-                    </div>
-                    <div class="callfooter">
-                        <a href="tel:0733553052" target="_blank"><img src="./images/footericons/call.png"
-                                alt="call"></a>
-                    </div>
-                    <div class="chatwithus">
-                        <a href="#" target="_blank"><img src="./images/footericons/cahtwithus.png" alt="chat"></a>
-                    </div>
+                    <ul>
+                        <li><a href="https://www.facebook.com" target="_blank"><img src="./images/footericons/fb.png"
+                                    alt="fb"></a></li>
+                        <li><a href="https://www.twitter.com" target="_blank"><img
+                                    src="./images/footericons/twitter.png" alt="twitter"></a></li>
+                        <li><a href="https://www.google.com" target="_blank"><img src="./images/footericons/google.png"
+                                    alt="google"></a></li>
+                        <li><a href="https://www.gmail.com" target="_blank"><img src="./images/footericons/email.png"
+                                    alt="email"></a></li>
+                        <li><a href="tel:0733553052" target="_blank"><img src="./images/footericons/call.png"
+                                    alt="call"></a></li>
+                        <li> <a href="#" target="_blank"><img src="./images/footericons/cahtwithus.png" alt="chat"></a>
+                        </li>
+                    </ul>
                 </div>
                 <div class="paymentmethods">
                     <p><span>Payment </span>Method</p>
-                    <div class="paymentscards">
-                        <div class="paypal">
-                            <a href="https://www.paypal.com/in/webapps/mpp/home" target="_blank"><img
-                                    src="./images/footericons/paypal.png" alt="fb"></a>
-                        </div>
-                        <div class="mastercard">
-                            <a href="https://www.mastercard.co.in/" target="_blank"><img
-                                    src="./images/footericons/mastercard.png" alt="mastercard"></a>
-                        </div>
-                        <div class="visa">
-                            <a href="https://www.visa.co.in/" target="_blank"><img src="./images/footericons/visa.png"
-                                    alt="visa"></a>
-                        </div>
-                        <div class="discovery">
-                            <a href="https://www.discover.com/" target="_blank"><img
-                                    src="./images/footericons/discovery.png" alt="discovery"></a>
-                        </div>
-                        <div class="amex">
-                            <a href="https://www.americanexpress.com/en-in/" target="_blank"><img
-                                    src="./images/footericons/amex.png" alt="amex"></a>
-                        </div>
-                    </div>
+                    <ul>
+                        <li><img src="./images/footericons/paypal.png" alt=""></li>
+                        <li><img src="./images/footericons/mastercard.png" alt="mastercard"></li>
+                        <li><img src="./images/footericons/visa.png" alt="visa"></li>
+                        <li><img src="./images/footericons/discovery.png" alt="discovery"></li>
+                        <li><img src="./images/footericons/amex.png" alt="amex"></li>
+                    </ul>
+
                 </div>
 
                 <div class="footertrustlogos">
-                    <div class="payalverified">
-                        <a href="https://www.paypal.com/uk/smarthelp/article/how-do-i-verify-my-paypal-account-faq444"
-                            target="_blank"><img src="./images/footericons/paypalVerified.png" alt="paypalVerified"></a>
-                    </div>
-                    <div class="mcafeesecure">
-                        <a href="https://www.mcafee.com/" target="_blank"><img
-                                src="./images/footericons/mcafeeSecure.png" alt="mcafeeSecure"></a>
-                    </div>
-                    <div class="geotrust">
-                        <a href="https://www.geotrust.com/" target="_blank"><img src="./images/footericons/geoTrust.png"
-                                alt="geoTrust"></a>
-                    </div>
+                    <ul>
+                        <li><img src="./images/footericons/paypalVerified.png" alt="paypalVerified"></li>
+                        <li><img src="./images/footericons/mcafeeSecure.png" alt="mcafeeSecure"></li>
+                        <li><img src="./images/footericons/geoTrust.png" alt="geoTrust"></li>
+                    </ul>
                 </div>
             </div>
         </div>
