--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/0d1063cf1c.js" crossorigin="anonymous"></script>
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/jquery.slick/1.4.1/slick.css'>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css">
     <link rel="stylesheet" href="./css/style.css">
@@ -15,56 +16,69 @@
 </head>
 
 <body>
-    <!-- HEADER - SECTION 1 -->
     <header>
         <div class="headertop">
             <div class="container">
                 <div class="headerContainer">
+                    <div class="mobile-nav">
+                        <i class="fas fa-bars"></i>
+                    </div>
+
                     <div class="logo">
                         <a href="./index.html"><img src="./images/logo.png" alt="logo"></a>
                     </div>
-                    <div class="header-search">
-                        <form action="/action_page.php" target="_blank" method="get">
-                            <input type="text" placeholder="Search entire store here" name="search">
-                            <button input type="submit"><i class="fa fa-search" style="color: #fff;"></i></button>
-                        </form>
-                    </div>
-                    <div class="header-call">
-                        <img src="./images/call-icon.png" alt="">
-                        <p><span> <a href="tel:0733553052">07 3355 3052 </a></span><br>Call Between 7am-8pm</p>
-                    </div>
-                    <div class="header-account">
-                        <img src="./images/accountlogo.png" alt="accountlogo">
-                        <div class="dropdown">
-                            <button class="dropbtn">My Account <i class="fa-solid fa-angle-down"></i></button>
-                            <div class="dropdown-content">
-                                <ul>
-                                    <li><a href="#">Favourites</a></li>
-                                    <li> <a href="#">Wishlist</a></li>
-                                    <li> <a href="#">Log-Out</a></li>
-                                </ul>
+                    <div class="site-nav-menu">
+                        <div class="primary-menu">
+
+                            <div class="header-search">
+                                <form action="/action_page.php" target="_blank" method="get">
+                                    <input type="text" placeholder="Search entire store here" name="search">
+                                    <button input type="submit"><i class="fa fa-search"
+                                            style="color: #fff;"></i></button>
+                                </form>
+                            </div>
+
+                            <div class="header-call">
+                                <img src="./images/call-icon.png" alt="">
+                                <p><span> <a href="tel:0733553052">07 3355 3052 </a></span><br>Call Between 7am-8pm
+                                </p>
+                            </div>
+
+                            <div class="header-account">
+                                <img src="./images/accountlogo.png" alt="accountlogo">
+                                <div class="dropdown">
+                                    <button class="dropbtn">My Account <i class="fa-solid fa-angle-down"></i></button>
+                                    <div class="dropdown-content">
+                                        <ul>
+                                            <li><a href="#">Favourites</a></li>
+                                            <li> <a href="#">Wishlist</a></li>
+                                            <li> <a href="#">Log-Out</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="header-cart">
-                        <a href="mycart.html"><img src="./images/cart.png" alt="accountlogo" id="carticon"></a>
-                        <p class="cart_number">&nbsp;0&nbsp;</p>
-                        </a>
-                        <a href="#"><img src="./images/ausicon.png" alt="ausicon" id="auslogo"></a>
-                        <select id="currencyselector">
-                            <option value="aud">AUD</option>
-                            <option value="inr">INR</option>
-                            <option value="inr">INR</option>
-                        </select>
-                        <p class="currency">
-                            $0.00
-                        </p>
+                        <div class="cart">
+                            <a href="mycart.html"><img src="./images/cart.png" alt="accountlogo" id="carticon"></a>
+                            <p class="cart_number">&nbsp;0&nbsp;</p>
+                            </a>
+                            <a href="#"><img src="./images/ausicon.png" alt="ausicon" id="auslogo"></a>
+                            <select id="currencyselector">
+                                <option value="aud">AUD</option>
+                                <option value="inr">INR</option>
+                                <option value="inr">INR</option>
+                            </select>
+                            <p class="currency">
+                                $0.00
+                            </p>
+                        </div>
+
                     </div>
                 </div>
             </div>
-
         </div>
-
 
         <!-- USP - SECTION 2 -->
         <div class="headermiddle">
@@ -138,10 +152,7 @@
                     <div class="banner-subheading">
                         <p>View our large range of mobility aids and <br>home health equipment for hire</p>
                     </div>
-                    <div class="banner-button">
-                        <button type="button" onclick="window.location.href = 'index.html';">More Info &nbsp;<i
-                                class="icon-arrow-right-circle"></i></button>
-                    </div>
+                    <a href="#">More Info <i class="icon-arrow-right-circle"></i></a>
                 </div>
             </div>
         </div>
@@ -159,10 +170,7 @@
                     <div class="banner-subheading2">
                         View our large range of mobility aids and <br>home health equipment for hire
                     </div>
-                    <div class="banner-button">
-                        <button type="button" onclick="window.location.href = 'index.html';">More Info <i
-                                class="icon-arrow-right-circle"></i></button>
-                    </div>
+                    <a href="#">More Info <i class="icon-arrow-right-circle"></i></a>
                 </div>
             </div>
         </div>
@@ -180,10 +188,7 @@
                     <div class="banner-subheading2">
                         View our large range of mobility aids and <br>home health equipment for hire
                     </div>
-                    <div class="banner-button">
-                        <button type="button" onclick="window.location.href = 'index.html';">More Info <i
-                                class="icon-arrow-right-circle"></i></button>
-                    </div>
+                    <a href="#">More Info <i class="icon-arrow-right-circle"></i></a>
                 </div>
             </div>
         </div>
@@ -392,7 +397,7 @@
                                 </div>
                             </div>
                             <div class="cardDescription">
-                                <div class="card-heading" style="padding-bottom: 37px;">
+                                <div class="card-heading">
                                     <h5>BioGaia Probiotic Drops 5mL</h5>
                                 </div>
                                 <div class="price">$395.00</div>
@@ -587,8 +592,8 @@
                     <p> Sign up for exclusive email, special & latest news</p>
                 </div>
                 <form action="/action_page.php">
-                    <input type="text" placeholder="Name" name="name" required>
-                    <input type="email" placeholder="Email address" name="mail" required>
+                    <input type="text" placeholder="First Name" name="name" required>
+                    <input type="email" placeholder="Enter your email address" name="mail" required>
                     <button type="submit" class="newsletterButton">Subscribe
                         <i class="fa fa-location-arrow"></i>
                     </button>
@@ -704,6 +709,6 @@
 </body>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src='https://cdn.jsdelivr.net/jquery.slick/1.4.1/slick.min.js'></script>
-<script src="./script.js"></script>
+<script src="./js/script.js"></script>
 
 </html>
