--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/0d1063cf1c.js" crossorigin="anonymous"></script>
-    <link rel='stylesheet' href='https://cdn.jsdelivr.net/jquery.slick/1.4.1/slick.css'>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel='stylesheet' href='./css/slick.css'>
+    <script src="./js/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css">
     <link rel="stylesheet" href="./css/style.css">
@@ -422,77 +422,49 @@
                             </a></h4>
                     </div>
                     <div class="servicesbanner">
-                        <div class="instoreimage">
-                            <img src="./images/instore-services/instore-services2.png" alt="banner1">
-                        </div>
-                        <div class="instoreText">
-                            <h4><a href="#"> Baby & Child Health
-                                    <i class="icon-arrow-right-circle servicebuttonsize"></i>
-                                </a></h4>
-                        </div>
+                        <img src="./images/instore-services/instore-services2.png" alt="banner1" class="instoreimage">
+                        <h4><a href="#" class="instoreText"> Baby & Child Health
+                                <i class="icon-arrow-right-circle servicebuttonsize"></i>
+                            </a></h4>
                     </div>
                     <div class="servicesbanner">
-                        <div class="instoreimage">
-                            <img src="./images/instore-services/instore-services3.png" alt="banner1">
-                        </div>
-                        <div class="instoreText">
-                            <h4><a href="#" id="services3"> Continence
-                                    <i class="icon-arrow-right-circle servicebuttonsize"></i>
-                                </a></h4>
-                        </div>
+                        <img src="./images/instore-services/instore-services3.png" alt="banner1" class="instoreimage">
+                        <h4><a href="#" id="services3" class="instoreText"> Continence
+                                <i class="icon-arrow-right-circle servicebuttonsize"></i>
+                            </a></h4>
                     </div>
                     <div class="servicesbanner">
-                        <div class="instoreimage">
-                            <img src="./images/instore-services/instore-services4.png" alt="banner1">
-                        </div>
-                        <div class="instoreText">
-                            <h4><a href="#" id="services4"> Diabetes
-                                    <i class="icon-arrow-right-circle servicebuttonsize"></i>
-                                </a></h4>
-                        </div>
+                        <img src="./images/instore-services/instore-services4.png" alt="banner1" class="instoreimage">
+                        <h4><a href="#" id="services4" class="instoreText"> Diabetes
+                                <i class="icon-arrow-right-circle servicebuttonsize"></i>
+                            </a></h4>
                     </div>
                 </div>
 
                 <div class="servicesBottom">
                     <div class="servicesbanner">
-                        <div class="instoreimage">
-                            <img src="./images/instore-services/instore-services5.png" alt="banner1">
-                        </div>
-                        <div class="instoreText">
-                            <h4><a href="#" id="services5"> Health Information
-                                    <i class="icon-arrow-right-circle servicebuttonsize"></i>
-                                </a></h4>
-                        </div>
+                        <img src="./images/instore-services/instore-services5.png" alt="banner1" class="instoreimage">
+                        <h4><a href="#" id="services5" class="instoreText"> Health Information
+                                <i class="icon-arrow-right-circle servicebuttonsize"></i>
+                            </a></h4>
                     </div>
                     <div class="servicesbanner">
-                        <div class="instoreimage">
-                            <img src="./images/instore-services/instore-services6.png" alt="banner1">
-                        </div>
-                        <div class="instoreText">
-                            <h4><a href="#" id="services6"> Medication Aids
-                                    <i class="icon-arrow-right-circle servicebuttonsize"></i>
-                                </a></h4>
-                        </div>
+                        <img src="./images/instore-services/instore-services6.png" alt="banner1" class="instoreimage">
+                        <h4><a href="#" id="services6" class="instoreText"> Medication Aids
+                                <i class="icon-arrow-right-circle servicebuttonsize"></i>
+                            </a></h4>
                     </div>
                     <div class="servicesbanner">
-                        <div class="instoreimage">
-                            <img src="./images/instore-services/instore-services7.png" alt="banner1">
-                        </div>
-                        <div class="instoreText">
-                            <h4><a href="#" id="services7"> Gourmet Meals
-                                    <i class="icon-arrow-right-circle servicebuttonsize"></i>
-                                </a></h4>
-                        </div>
+                        <img src="./images/instore-services/instore-services7.png" alt="banner1" class="instoreimage">
+                        <h4><a href="#" id="services7" class="instoreText"> Gourmet Meals
+                                <i class="icon-arrow-right-circle servicebuttonsize"></i>
+                            </a></h4>
                     </div>
                     <div class="servicesbanner">
-                        <div class="instoreimage">
-                            <img src="./images/instore-services/instore-services8.png" alt="banner1">
-                        </div>
-                        <div class="instoreText">
-                            <h4><a href="#" id="services8"> IGA X-press
-                                    <i class="icon-arrow-right-circle servicebuttonsize"></i>
-                                </a></h4>
-                        </div>
+                        <img src="./images/instore-services/instore-services8.png" alt="banner1" class="instoreimage">
+                        <h4><a href="#" id="services8" class="instoreText"> IGA X-press
+                                <i class="icon-arrow-right-circle servicebuttonsize"></i>
+                            </a></h4>
                     </div>
                 </div>
             </div>
@@ -504,25 +476,27 @@
     <!-- OUR TOP PRODUCTS -->
     <div class="container">
         <div class="our-top-products">
-            <div class="instore-text"> Our Top Brands </div>
-            <div class="brands">
-                <div class="optifast-brand">
-                    <a href="#"><img src="./images/brands/brand1.jpg" alt="brand1"></a>
-                </div>
-                <div class="amcal-brand">
-                    <a href="#"><img src="./images/brands/brand2.jpg" alt="brand2"></a>
-                </div>
-                <div class="avent-brand">
-                    <a href="#"><img src="./images/brands/brand3.jpg" alt="brand3"></a>
-                </div>
-                <div class="omron-brand">
-                    <a href="#"><img src="./images/brands/brand4.jpg" alt="brand4"></a>
-                </div>
-                <div class="musashi-brand">
-                    <a href="#"><img src="./images/brands/brand5.jpg" alt="brand5"></a>
-                </div>
-                <div class="depend-brand">
-                    <a href="#"><img src="./images/brands/brand6.jpg" alt="brand6"></a>
+            <div class="top-products">
+                <div class="instore-text"> Our Top Brands </div>
+                <div class="brands">
+                    <div class="optifast-brand">
+                        <a href="#"><img src="./images/brands/brand1.jpg" alt="brand1"></a>
+                    </div>
+                    <div class="amcal-brand">
+                        <a href="#"><img src="./images/brands/brand2.jpg" alt="brand2"></a>
+                    </div>
+                    <div class="avent-brand">
+                        <a href="#"><img src="./images/brands/brand3.jpg" alt="brand3"></a>
+                    </div>
+                    <div class="omron-brand">
+                        <a href="#"><img src="./images/brands/brand4.jpg" alt="brand4"></a>
+                    </div>
+                    <div class="musashi-brand">
+                        <a href="#"><img src="./images/brands/brand5.jpg" alt="brand5"></a>
+                    </div>
+                    <div class="depend-brand">
+                        <a href="#"><img src="./images/brands/brand6.jpg" alt="brand6"></a>
+                    </div>
                 </div>
             </div>
 
@@ -707,8 +681,8 @@
 
 
 </body>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src='https://cdn.jsdelivr.net/jquery.slick/1.4.1/slick.min.js'></script>
+<script src='./js/jquery-min.js'></script>
+<script src='./js/slick-min.js'></script>
 <script src="./js/script.js"></script>
 
 </html>
